--- a/frontend/templates/base_nav_bar.html
+++ b/frontend/templates/base_nav_bar.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Home </title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mainpage.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -14,7 +17,7 @@
                 Artket
             </div>
             <div class="filter">
-                Artworks
+                Medium
             </div>
             <div class="filter">
                 Artists
