--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -3,11 +3,11 @@
 {% block content %}
 
 <div class="child-container">
-    <img class = "home-image" src="/static/images/pearl_earring.jpeg">
+    <img class = "home-img" src="/static/images/pearl_earring.jpeg">
 </div>
 
 <div class="child-container">
-    <img class = "home-image" src="/static/images/almond_blossom.jpg">
+    <img class = "home-img" src="/static/images/almond_blossom.jpg">
 </div>
 
 
