--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -2,6 +2,13 @@
 {% block title %}Sign Up{% endblock %}
 {% block content %}
 
+
+<div class="child-container">
+    <img class = "login-img" src="/static/images/monalisa.jpeg">
+</div>
+
+<div class="child-container">
+
 <form method="POST">
     <div>
         <label for="name">Name: </label>
@@ -28,9 +35,10 @@
         <input type="text" id="invitation-code" name="invitation-code">
     </div>
     <div>
-        <button type="submit">Submit</button>
+        <button type="submit">Register</button>
     </div>
 
 </form>
+</div>
 
 {% endblock %}
