--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} Home {% endblock %}</title>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mainpage.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 
