--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -10,5 +10,7 @@
     <img class = "home-img" src="/static/images/almond_blossom.jpg">
 </div>
 
+<a href="{{url_for('gallery_display')}}" class="home-btn"><button type="button">View Gallery</button></a>
+
 
 {% endblock %}
