--- a/frontend/templates/homepage.html
+++ b/frontend/templates/homepage.html
@@ -2,15 +2,17 @@
 {% block title %}Home Page{% endblock %}
 {% block content %}
 
-<div class="child-container">
-    <img class = "home-img" src="/static/images/pearl_earring.jpeg">
+<div class="top-margin">
+    <div class="child-container">
+        <img class = "home-img" src="/static/images/pearl_earring.jpeg">
+    </div>
+
+    <div class="child-container">
+        <img class = "home-img" src="/static/images/almond_blossom.jpg">
+    </div>
 </div>
 
-<div class="child-container">
-    <img class = "home-img" src="/static/images/almond_blossom.jpg">
-</div>
-
-<a href="{{url_for('gallery_display')}}" class="home-btn"><button type="button">View Gallery</button></a>
+<!--<a href="{{url_for('gallery_display')}}" class="home-btn"><button type="button">View Gallery</button></a>-->
 
 
 {% endblock %}
