--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -7,36 +7,32 @@
 </div>
 
 <div class="child-container" style="flex-flow:wrap; height: 100vh;">
-
     <div class="page-indicator">
         Login
     </div>
 
     <form method="POST">
+        {% if error_msg %}
+            <div style="color: red;">
+                {{ error_msg }}
+            </div>
+        {% endif %}
+
         <div>
             <label for="email-or-phone">Email or Phone Number: </label>
             <input type="text" id="email-or-phone" name="email-or-phone">
         </div>
+
         <div>
             <label for="password">Password: </label>
             <input type="password" id="password" name="password">
         </div>
+
         <div style="display: flex;">
             <button type="submit" class="form-button" name="submit-button" value="login">Login</button>
             <button type="submit" class="form-button" name="submit-button" value="register" onclick="{{url_for('signup_user')}}">Register</button>
         </div>
-        <div style="color: red;">
-        {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            {% for message in messages %}
-              Error Message: {{ message }}
-            {% endfor %}
-          {% endif %}
-        {% endwith %}
-        </div>
     </form>
-
-
 </div>
 
 
