--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -14,6 +14,11 @@
     </div>
 
     <form method="POST">
+        {% if error_msg %}
+            <div style="color: red;">
+                {{ error_msg }}
+            </div>
+        {% endif %}
         <div>
             <label for="name">Name: </label>
             <input type="text" id="name" name="name">
@@ -23,16 +28,16 @@
             <input type="text" id="email" name="email">
         </div>
         <div>
+            <label for="phone-number">Phone Number: </label>
+            <input type="text" id="phone-number" name="phone-number">
+        </div>
+        <div>
             <label for="password">Password: </label>
             <input type="password" id="password" name="password">
         </div>
         <div>
             <label for="confirm-password">Confirm Password: </label>
             <input type="password" id="confirm-password" name="confirm-password">
-        </div>
-        <div>
-            <label for="phone-number">Phone Number: </label>
-            <input type="text" id="phone-number" name="phone-number">
         </div>
         <div>
             <label for="invitation-code">Invitation code: </label>
