fix gallery filter

--- a/frontend/templates/base_nav_bar.html
+++ b/frontend/templates/base_nav_bar.html
@@ -19,7 +19,6 @@
 
             <div class="dropdown">
                 <a href="{{url_for('gallery_display')}}"><button class="filter" type="button">Gallery</button></a>
-
             </div>
 
             <div class="dropdown">
@@ -28,14 +27,14 @@
                 </button>
 
                 <div class="dropdown-content">
-                    <a>Tempera</a>
-                    <a>Oil Painting</a>
-                    <a>Acrylic Painting</a>
-                    <a>Watercolors</a>
-                    <a>Charcoal</a>
-                    <a>Pastels</a>
-                    <a>Chalk</a>
-                    <a>Graphite</a>
+                    <a href="{{ url_for('gallery_display', _filter=('medium', 'tempera')) }}">Tempera</a>
+                    <a href="{{ url_for('gallery_display', _filter=('medium', 'oil painting')) }}">Oil Painting</a>
+                    <a href="{{ url_for('gallery_display', _filter=('medium', 'acrylic painting')) }}">Acrylic Painting</a>
+                    <a href="{{ url_for('gallery_display', _filter=('medium', 'watercolors')) }}">Watercolors</a>
+                    <a href="{{ url_for('gallery_display', _filter=('medium', 'charcoal')) }}">Charcoal</a>
+                    <a href="{{ url_for('gallery_display', _filter=('medium', 'pastels')) }}">Pastels</a>
+                    <a href="{{ url_for('gallery_display', _filter=('medium', 'chalk')) }}">Chalk</a>
+                    <a href="{{ url_for('gallery_display', _filter=('medium', 'graphite')) }}">Graphite</a>
                 </div>
             </div>
 
@@ -44,10 +43,10 @@
                     Artists
                 </button>
                 <div class="dropdown-content">
-                    <a>Sandro Botticelli</a>
-                    <a>Leonardo Da Vinci</a>
-                    <a>Francisco Goya</a>
-                    <a>Vincent Van Gogh</a>
+                    <a href="{{ url_for('gallery_display', _filter=('artist', 'Sandro Botticelli')) }}">Sandro Botticelli</a>
+                    <a href="{{ url_for('gallery_display', _filter=('artist', 'Leonardo Da Vinci')) }}">Leonardo Da Vinci</a>
+                    <a href="{{ url_for('gallery_display', _filter=('artist', 'Francisco Goya')) }}">Francisco Goya</a>
+                    <a href="{{ url_for('gallery_display', _filter=('artist', 'Vincent Van Gogh')) }}">Vincent Van Gogh</a>
                 </div>
             </div>
 
@@ -56,21 +55,24 @@
                     Price
                 </button>
                 <div class="dropdown-content">
-                    <div style="display: flex; ">
+                    <div style="display: flex;">
 
                         <div style="background-color: #F5F5DC;">
-                            <div style="margin: 10px;">
-                                <label for="min-value" >Minimum Price: </label>
-                                <input type="number" id="min-value" name="min-value">
-                            </div>
+                            <form action="{{ url_for('gallery_display') }}" method="post">
+                                <div style="margin: 10px;">
+                                    <label for="min-value" >Min Price: </label>
+                                    <input type="number" id="min-value" name="min-value" required>
+                                </div>
 
-                            <div style="margin: 10px;">
-                                <label for="max-value">Maximum Price: </label>
-                                <input type="number" id="max-value" name="max-value">
-                            </div>
+                                <div style="margin: 10px;">
+                                    <label for="max-value">Max Price: </label>
+                                    <input type="number" id="max-value" name="max-value" required>
+                                </div>
 
-                            <button type="submit" style="margin: 15px;">Submit</button>
+                                <button type="submit" style="margin: 15px;">Submit</button>
+                            </form>
                         </div>
+
                     </div>
                 </div>
             </div>
