--- a/frontend/static/styles/mainpage.css
+++ b/frontend/static/styles/mainpage.css
@@ -29,7 +29,6 @@ a {
 
 form div {
     display: block;
-    max-width: 200px;
     margin-top: 20px;
 }
 
@@ -50,7 +49,10 @@ label{
     width: 100%;
     max-width: 100%;
     height: 89vh;
+}
 
+.header .child-container{
+    max-height: 15vh;
 }
 
 .img {
@@ -122,6 +124,7 @@ label{
 .bookmark-img{
     width: 20%;
     height: auto;
+    display: none;
 }
 
 .showcase-img{
@@ -141,6 +144,7 @@ div.form-entry{
     width: 30vw;
     height: auto;
     margin-top: 30px;
+    margin-bottom: 40px;
     display: block;
 }
 
@@ -200,9 +204,10 @@ div.form-entry{
 }
 
 .art-desc{
-    font-style: italic;
+
     font-size: 1em;
-    margin: 10px;
+    text-align: left;
+    width: 100%;
 }
 
 .dropdown:hover {background-color: #ddd;}
@@ -217,3 +222,40 @@ div.form-entry{
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 .dropdown-flex:hover .dropbtn {background-color: #3e8e41;}
+
+
+.page-content-container {
+    display: flex;
+    width: 100vw;
+    height: 89vh;
+    margin-top: 11vh;
+}
+
+.page-column-container {
+    width: 50%;
+    height: 100%;
+}
+
+.column-img-display {
+    width: 80%;
+    margin: 10%;
+}
+
+.card-in-column {
+    background: #fbfbfb;
+    border-radius: 10px;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.65);
+    padding: 5%;
+    width: 50%;
+}
+
+.card-form{
+    text-align: center;
+    width: 100%;
+}
+
+.card-input-field {
+    text-align: center;
+    width: 100%;
+
+}
