--- a/frontend/templates/information.html
+++ b/frontend/templates/information.html
@@ -26,6 +26,8 @@
                 <p class="art-desc"> <b>Date of Creation: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b> </p>
                 <hr style="width: 100%;">
                 <p class="art-desc"> <b> Location of Creation: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></p>
+                <hr style="width: 100%;">
+                <p class="art-desc"> <b> Price: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></p>
             </div>
 
             <div style="display: block;">
@@ -40,11 +42,9 @@
                 <p class="art-desc">  {{value['info']['created_date']}} </p>
                 <hr style="width: 100%;">
                 <p class="art-desc">  {{value['info']['created_location']}} </p>
-
+                <hr style="width: 100%;">
+                <p class="art-desc">  ${{value['info']['min_value']}} </p>
             </div>
-
-
-
         </div>
     </div>
 
