--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -11,7 +11,7 @@
     <div class="card-in-column">
 
         <form method="POST" class="card-form">
-        <p class="page-indicator" style="margin: 0;">Register</p>
+            <p class="page-indicator" style="margin: 0;">Register</p>
             {% if error_msg %}
                 <div style="color: red;">
                     {{ error_msg }}
@@ -42,7 +42,8 @@
                 <input type="text" id="invitation-code" name="invitation-code" style="width: 100%;">
             </div>
             <div>
-                <button type="submit" class="none-nav-button">Register</button>
+                <button type="submit" class="none-nav-button" name="submit-button" value="register">Register</button>
+                <button type="submit" class="none-nav-button" name="submit-button" value="go_back" onclick="{{url_for('signup_user')}}">Go Back</button>
             </div>
 
         </form>
