Left align everything

--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -19,12 +19,12 @@
             {% endif %}
 
 
-            <div>
+            <div style="text-align: left;">
                 <label for="email-or-phone">Email or Phone Number: </label>
                 <input type="text" id="email-or-phone" name="email-or-phone" style="width: 100%;">
             </div>
 
-            <div>
+            <div style="text-align: left;">
                 <label for="password">Password: </label>
                 <input type="password" id="password" name="password" style="width: 100%;">
             </div>
