--- a/frontend/templates/buy.html
+++ b/frontend/templates/buy.html
@@ -36,7 +36,7 @@
                     <input type="numeric" id="shipping-address" name="shipping-address" style="width: 80%;">
                 </div>
 
-                <div class="card-input-field">
+                <div class="card-input-field" style="text-align: center;">
                     <button type="submit" class="none-nav-button">Purchase</button>
                 </div>
 
