--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -17,27 +17,27 @@
                     {{ error_msg }}
                 </div>
             {% endif %}
-            <div>
+            <div style="text-align: left;">
                 <label for="name">Name: </label>
                 <input type="text" id ="name" name="name" style="width: 100%;">
             </div>
-            <div>
+            <div style="text-align: left;">
                 <label for="email">Email: </label>
                 <input type="text" id="email" name="email" style="width: 100%;">
             </div>
-            <div>
+            <div style="text-align: left;">
                 <label for="phone-number">Phone Number: </label>
                 <input type="text" id="phone-number" name="phone-number" style="width: 100%;">
             </div>
-            <div>
+            <div style="text-align: left;">
                 <label for="password">Password: </label>
                 <input type="password" id="password" name="password" style="width: 100%;">
             </div>
-            <div>
+            <div style="text-align: left;">
                 <label for="confirm-password">Confirm Password: </label>
                 <input type="password" id="confirm-password" name="confirm-password" style="width: 100%;">
             </div>
-            <div>
+            <div style="text-align: left;">
                 <label for="invitation-code">Invitation code: </label>
                 <input type="text" id="invitation-code" name="invitation-code" style="width: 100%;">
             </div>
