feat: add curr_user password to session

--- a/frontend/templates/buy.html
+++ b/frontend/templates/buy.html
@@ -13,27 +13,30 @@
 
                 <div class="card-input-field">
                     <label for="card-number">Card Number: </label>
-                    <input type="numeric" id="card-number" name="card-number" style="width: 80%;">
+                    <input type="number" id="card-number" name="card-number"
+                           style="width: 80%;-webkit-appearance: none;" required>
                 </div>
 
                 <div class="card-input-field">
                     <label for="expiration-date">Expiration Date: </label>
-                    <input type="month" id="expiration-date" name="expiration-date" style="width: 80%;">
+                    <input type="month" id="expiration-date" name="expiration-date" style="width: 80%;" required>
                 </div>
 
                 <div class="card-input-field">
                     <label for="cvv-code">CVV Code: </label>
-                    <input type="numeric" id="cvv-code" name="cvv-code" style="width: 80%;">
+                    <input type="number" id="cvv-code" name="cvv-code" style="width: 80%; -webkit-appearance: none;"
+                           required>
                 </div>
 
-                <div class="card-input-field">
-                    <label for="paid-amount">Paid Amount: </label>
-                    <input type="numeric" id="paid-amount" name="paid-amount" style="width: 80%;">
-                </div>
+                <!--                <div class="card-input-field">-->
+                <!--                    <label for="paid-amount">Paid Amount: </label>-->
+                <!--                    <input type="number" id="paid-amount" name="paid-amount" style="width: 80%; -webkit-appearance: none;" required>-->
+                <!--                </div>-->
 
                 <div class="card-input-field">
                     <label for="shipping-address">Shipping Address: </label>
-                    <input type="numeric" id="shipping-address" name="shipping-address" style="width: 80%;">
+                    <input type="text" id="shipping-address" name="shipping-address"
+                           style="width: 80%;" required>
                 </div>
 
                 <div class="card-input-field">
