--- a/frontend/templates/buy.html
+++ b/frontend/templates/buy.html
@@ -10,39 +10,56 @@
     <div class="page-column-container">
         <div class="card-in-column">
             <form method="POST" class="card-form">
+                {% if purchase_success %}
+
+                <p class="page-indicator" style="margin: 0;">Purchase Success</p>
+                <p style="text-align: left;">Artwork purchase SUCCESSFUL. The artwork will be shipped to:</p>
+                <p>{{ purchase_success }}</p>
+
+                <div class="card-input-field" style="text-align: center;">
+                    <button type="submit" class="none-nav-button" name="submit-button" value="back_to_gallery">
+                        Back to Gallery
+                    </button>
+                </div>
+
+                {% else %}
+
+                {% if error_msg %}
+                <p style="text-align: left; color: red;">
+                    {{ error_msg }}
+                </p>
+                {% endif %}
+
+                <p class="page-indicator" style="margin: 0;">Purchase</p>
 
                 <div class="card-input-field">
                     <label for="card-number">Card Number: </label>
-                    <input type="number" id="card-number" name="card-number"
-                           style="width: 80%;-webkit-appearance: none;" required>
+                    <input type="number" id="card-number" name="card-number" style="width: 100%;" required>
                 </div>
 
                 <div class="card-input-field">
                     <label for="expiration-date">Expiration Date: </label>
-                    <input type="month" id="expiration-date" name="expiration-date" style="width: 80%;" required>
+                    <input type="month" id="expiration-date" name="expiration-date" style="width: 100%;" required>
                 </div>
 
                 <div class="card-input-field">
                     <label for="cvv-code">CVV Code: </label>
-                    <input type="number" id="cvv-code" name="cvv-code" style="width: 80%; -webkit-appearance: none;"
-                           required>
+                    <input type="number" id="cvv-code" name="cvv-code" style="width: 100%;" required>
                 </div>
-
-                <!--                <div class="card-input-field">-->
-                <!--                    <label for="paid-amount">Paid Amount: </label>-->
-                <!--                    <input type="number" id="paid-amount" name="paid-amount" style="width: 80%; -webkit-appearance: none;" required>-->
-                <!--                </div>-->
 
                 <div class="card-input-field">
                     <label for="shipping-address">Shipping Address: </label>
                     <input type="text" id="shipping-address" name="shipping-address"
-                           style="width: 80%;" required>
+                           style="width: 100%;" required>
                 </div>
 
                 <div class="card-input-field" style="text-align: center;">
-                    <button type="submit" class="none-nav-button">Purchase</button>
+                    <button type="submit" class="none-nav-button" name="submit-button" value="purchase">
+                        Purchase
+                    </button>
                 </div>
 
+                {% endif %}
             </form>
         </div>
     </div>
